--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.mirsaitov.tm</groupId>
     <artifactId>task-manager</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7</version>
 
     <name>task-manager</name>
-    <url>http://www.example.com</url>
 
     <developers>
         <developer>
@@ -46,7 +45,7 @@
                         <archive>
                             <manifest>
                                 <addClasspath>true</addClasspath>
-                                <mainClass>ru.mirsaitov.tm.App</mainClass>
+                                <mainClass>ru.mirsaitov.tm.Main</mainClass>
                             </manifest>
                         </archive>
                     </configuration>
